objects/ODP_PAC_Member__c.object
<CustomObject>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAC_Name__c</fullName>
        <label>PAC Name</label>
        <referenceTo>ODP_PAC__c</referenceTo>
        <relationshipName>PAC_Member</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PAC_Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PAC Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PACM-{0000000000}</displayFormat>
        <label>PAC Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAC Member</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>